# eph-epm

./: CMakeLists.txt  README.md  README_RU.md  main.cpp  meson.build  ru.mail.bobilev_yury.EphEPM.desktop
.github/: FUNDING.yml
EphEPM/: Bodylist.csv  graphicWidg.css  mainWindow.css
include/: AuxFunc.h  BodyListItem.h  BodyV.h  ByteOrder.h  CMakeLists.txt  CoordKeeper.h  Coordinates.h  DAFOperations.h  DiagramWidget.h  EPMApplication.h  EPMCalculations.h  MainWindow.h  ModelColumns.h  OrbitsDiagram.h  ResultWindow.h  SPKItem.h  meson.build
omp_task_test/: CMakeLists.txt  main.cpp
omp_test_nested/: CMakeLists.txt  main.cpp
po/: .project  ephepm.po  meson.build  ru.po
src/: AuxFunc.cpp  BodyListItem.cpp  BodyV.cpp  ByteOrder.cpp  CMakeLists.txt  CoordKeeper.cpp  Coordinates.cpp  DAFOperations.cpp  DiagramWidget.cpp  EPMApplication.cpp  EPMCalculations.cpp  EphemerisEPM.cpp  MainWindow.cpp  ModelColumns.cpp  OrbitsDiagram.cpp  ResultWindow.cpp  SPKItem.cpp  main.cpp  meson.build
